fixed consul implementation